# dotman

./: Cargo.toml  README.md
docs/: repository.md  usage.md
src/: LICENSE  cli.rs  config.rs  errors.rs  gitactions.rs  main.rs  package.rs  print.rs  remote.rs  repo.rs  required_packages.rs  script.rs  source.rs  utils.rs
src/commands/: inspect.rs  install.rs  mod.rs  script.rs  search.rs
