[package]
name = "dotman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["unstable", "attributes"] }
clap = { version = "4.3.24", features = ["derive"] }
colored = "2.0.4"
git2 = "0.17.2"
inquire = "0.6.2"
serde = { version = "1.0.186", features = ["derive"] }
toml = "0.7.6"
