[package]
name = "dotman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.24", features = ["derive"] }
colored = "2.0.4"
indicatif = "0.17.6"
inquire = "0.6.2"
serde = { version = "1.0.186", features = ["derive"] }
toml = "0.7.6"
